--- a/src/app/achievements/achievements.component.html
+++ b/src/app/achievements/achievements.component.html
@@ -17,7 +17,9 @@
     <img src="http://2018.igem.org/wiki/images/8/8b/T--GO_Paris-Saclay--gold.png" class="wideimg">
   </div>
 
-  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Integrated Human Practices</h1>   </div>
+  <div class="titrebloc"><img class="carretitrepincipal"
+                              src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">
+    <h1>Integrated Human Practices</h1></div>
   <p>
     At the beginning of our project, two members of our team wanted to work on endocrine disruptor in wastewater
     treatment. However, several survey and research made on the subject indicated us that there were already plenty of
@@ -48,33 +50,47 @@
     which the synthetic pathways of interest behave as parasitic systems and are associated to fitness-cost.
   </p>
 
-  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Model</h1>   </div>
+  <div class="titrebloc"><img class="carretitrepincipal"
+                              src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">
+    <h1>Model</h1></div>
   <p>Advanced models were created and used to get insight into the core of the project, and the degradation of the MTX.
     More precisely, we modelize the case in which the degradation of anticancer drugs and the biotransformation pathways
     themselves are toxic. Modeling an heterogeneous expression of the synthetic pathway within the ‘cleaning factory’
     population highlights the interest of a division of labor between “cleaning” and “stem” bacterial cells.
   </p>
-  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Demonstrate our project work</h1>   </div>
+  <div class="titrebloc"><img class="carretitrepincipal"
+                              src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">
+    <h1>Demonstrate our project work</h1></div>
   <p>We designed synthetic cassettes encoding a new biotransformation pathway using an heterologous carboxypeptidase in
-    <i>Escherichia coli</i>. In only 5 h, our ‘cleaning factory’ drastically removes MTX from the media. During our project we
+    <i>Escherichia coli</i>. In only 5 h, our ‘cleaning factory’ drastically removes MTX from the media. During our
+    project we
     demonstrated that the level of MTX after getting through our E. coli population, dropped from 512 µM to close to 0,
     proving that our degrading system is efficient.
   </p>
-  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Improvement of an existing biobrick</h1>   </div>
-  <p>During the part of our part concerning the ‘heterogenious’ expression system, we initially wanted to express <i>ler</i>
-    genes at different levels. Therefore we had interest in the large and very well characterized <a href="http://parts.igem.org/Promoters/Catalog/Anderson">Anderson promoter
+  <div class="titrebloc"><img class="carretitrepincipal"
+                              src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">
+    <h1>Improvement of an existing biobrick</h1></div>
+  <p>During the part of our part concerning the ‘heterogenious’ expression system, we initially wanted to express
+    <i>ler</i>
+    genes at different levels. Therefore we had interest in the large and very well characterized <a
+      href="http://parts.igem.org/Promoters/Catalog/Anderson">Anderson promoter
       collection</a>. Four promoters from this collection were available in
-    pSB1C3 backbone vector in the Distribution Kit 2018 (<a href="http://parts.igem.org/Part:BBa_J23119">BBa_J23119</a> ; <a href="http://parts.igem.org/Part:BBa_J23108">BBa_J23108</a> ;
-    <a href="http://parts.igem.org/Part:BBa_J23109">BBa_J23109</a> ; <a href="http://parts.igem.org/Part:BBa_J23108">BBa_J23111</a>). By
+    pSB1C3 backbone vector in the Distribution Kit 2018 (<a href="http://parts.igem.org/Part:BBa_J23119">BBa_J23119</a>
+    ; <a href="http://parts.igem.org/Part:BBa_J23108">BBa_J23108</a> ;
+    <a href="http://parts.igem.org/Part:BBa_J23109">BBa_J23109</a> ; <a href="http://parts.igem.org/Part:BBa_J23108">BBa_J23111</a>).
+    By
     sequencing the pSB1C3 plasmids carrying these promoters we identified in three of them extra-sequences (notable SpeI
     extra-sites) that were detrimental for further Biobrick assembly strategy. We corrected one of them by directed
-    mutagenesis and sent the corrected pSB1C3-BBa_J23108_corrected plasmid ( <a href="http://parts.igem.org/Part:BBa_K2688025">BBa_K2688025</a>) to iGEM.
+    mutagenesis and sent the corrected pSB1C3-BBa_J23108_corrected plasmid ( <a
+      href="http://parts.igem.org/Part:BBa_K2688025">BBa_K2688025</a>) to iGEM.
   </p>
   <div class="centerstuff" style="width: 300px;">
     <img src="http://2018.igem.org/wiki/images/2/26/T--GO_Paris-Saclay--silver.png" class="wideimg">
   </div>
 
-  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Validated Part</h1>   </div>
+  <div class="titrebloc"><img class="carretitrepincipal"
+                              src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">
+    <h1>Validated Part</h1></div>
   <p>We match all deliverables requirements and submitted 13 Biobricks (see Table).</p>
 
   <table class="mdl-data-table mdl-js-data-table mdl-data-table--selectable mdl-shadow--2dp halfwidetable centerstuff">
@@ -132,7 +148,8 @@
     </tr>
     <tr>
       <td class="c36 c13" colspan="3" rowspan="1">
-        <div style="text-align: center;font-weight: bolder;font-size: 18pt;">&lsquo;HeteroGenious&rsquo; expression</div>
+        <div style="text-align: center;font-weight: bolder;font-size: 18pt;">&lsquo;HeteroGenious&rsquo; expression
+        </div>
       </td>
     </tr>
     <tr>
@@ -253,49 +270,82 @@
     </tbody>
   </table>
 
-  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Collaborations</h1>   </div>
+  <div class="titrebloc"><img class="carretitrepincipal"
+                              src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">
+    <h1>Collaborations</h1></div>
   <p>
-  We have significantly worked with 3 other registered iGEM team (IGEM Grenoble Alpes 2018, iGEM Sorbonne University
-    team, Dusseldorf iGEM team) in a perfect symbiosis. For more informations, go check out our <a (click)="this.router.navigate(['/collaborations'], { fragment: 'top'})">collaboration</a> page.</p>
+    We have significantly worked with 3 other registered iGEM team (IGEM Grenoble Alpes 2018, iGEM Sorbonne University
+    team, Dusseldorf iGEM team) in a perfect symbiosis. For more informations, go check out our <a
+    (click)="this.router.navigate(['/collaborations'], { fragment: 'top'})">collaboration</a> page.</p>
   <p>
-  <a href="http://2018.igem.org/Team:Sorbonne_U_Paris/Collaborations">iGEM Sorbonne University team</a>: we designed and realised the mathematical model of their project. In exchanges, they
-  helped us at the beginning of the sketching process for our brand new logo and they gave us a special class about the
-  wiki conception.
+    <a href="http://2018.igem.org/Team:Sorbonne_U_Paris/Collaborations">iGEM Sorbonne University team</a>: we designed
+    and realised the mathematical model of their project. In exchanges, they
+    helped us at the beginning of the sketching process for our brand new logo and they gave us a special class about
+    the
+    wiki conception.
   </p>
   <p>
-  <a href="http://2018.igem.org/Team:Grenoble-Alpes/Collaborations">IGEM Grenoble Alpes 2018</a>: we created the: “Take a famous painting and throw some biology in it challenge”
+    <a href="http://2018.igem.org/Team:Grenoble-Alpes/Collaborations">IGEM Grenoble Alpes 2018</a>: we created the:
+    “Take a famous painting and throw some biology in it challenge”
   </p>
   <p>
-  <a href="http://2018.igem.org/Team:Duesseldorf/Collaborations">Dusseldorf iGEM team</a>: we participate to the postcard campaign thrown by the Dusseldorf team, we made a postcard which
-  shows an image related to synthetic biology.
+    <a href="http://2018.igem.org/Team:Duesseldorf/Collaborations">Dusseldorf iGEM team</a>: we participate to the
+    postcard campaign thrown by the Dusseldorf team, we made a postcard which
+    shows an image related to synthetic biology.
   <p>
 
-  <!--
-  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Human Practices</h1>   </div>
-  Survey Study Meeting with an environmental lawyer
-  Interview
-  Drawing book
--->
+
+  <div class="titrebloc"><img class="carretitrepincipal"
+                              src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">
+    <h1>Human Practices</h1></div>
+  <p>
+    Cancer is one of the greatest diseases of our century and lots of different drugs are used in order to fight this
+    it. These medicines can cause dramatic effects on the environment. With that in our minds, we decided to send
+    surveys to the two biggest cancer research facilities in France and Europe. The answers were glaring and there is
+    still plenty of work to be done in this field. In order to be sure not to waste time, and target the right drug to
+    degrade, we asked the “type” of drugs researchers were working on the most. That’s how the methotrexate (MTX) came
+    to our thoughts and how our project was born. To be sure, that our concept was really integrated to the society we
+    live in, we made questionnaires for the general public. We also interviewed some specialists from Arvia, a huge
+    waste water treatment company, localized in Britany, about wastewaters drugs treatments. We even contacted a French
+    lawyer to make sure of the legality of our project. Finally, by analyzing the answers to our surveys we propose to
+    extend our project in at least three directions:</p>
+
+    <p>i) the design of a bacteria confinement that could allow the use of the ‘cleaning factory’ at home for people on
+    outpatient treatment,</p>
+    <p>ii) the use of our system as a probiotic in the case of MTX acute toxicity,</p>
+    <p>iii) the use of the ‘heterogenious’ expression system we developed for this project in other strains in which the
+    synthetic pathways of interest are associated to fitness-cost.</p>
+
+
 
   <div class="centerstuff" style="width: 300px;">
     <img src="http://2018.igem.org/wiki/images/3/3e/T--GO_Paris-Saclay--bronze.png" class="wideimg">
   </div>
 
 
-  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Register and attend</h1>   </div>
+  <div class="titrebloc"><img class="carretitrepincipal"
+                              src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">
+    <h1>Register and attend</h1></div>
   <p>We successfully registered for iGEM and had an amazing time, and will attend the Giant Jamboree</p>
 
-  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Deliverables</h1>   </div>
+  <div class="titrebloc"><img class="carretitrepincipal"
+                              src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">
+    <h1>Deliverables</h1></div>
   <p>We created our wiki, documented our entire project and our future aspirations</p>
   <p>Our Poster and presentation are ready to be presented at the Giant Jamboree</p>
   <p>The judging form as well as the safety form were filled up as soon as they were available.</p>
   <p>We created, documented and registered all of our part in the registry page</p>
   <p>We submitted all of our part’s DNA samples.</p>
-  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Attribution</h1>   </div>
+  <div class="titrebloc"><img class="carretitrepincipal"
+                              src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">
+    <h1>Attribution</h1></div>
   <p>We are grateful for all the help we have received, to see the wonderful people who helped us, check out our
     <a (click)="this.router.navigate(['/attribution'], { fragment: 'top'})">attribution</a> page</p>
-  <div class="titrebloc">     <img class="carretitrepincipal" src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">     <h1>Contributions</h1>   </div>
-  <p>We conduct and realised the interlab measurement study, you can see our result in the <a (click)="this.router.navigate(['/biology', 'interlab'], { fragment: 'top'})">interlab</a> Page</p>
+  <div class="titrebloc"><img class="carretitrepincipal"
+                              src="http://2018.igem.org/wiki/images/f/fd/T--GO_Paris-Saclay--carretitreprinci.png">
+    <h1>Contributions</h1></div>
+  <p>We conduct and realised the interlab measurement study, you can see our result in the <a
+    (click)="this.router.navigate(['/biology', 'interlab'], { fragment: 'top'})">interlab</a> Page</p>
 
   <p class="spacemaker"></p>
 
