--- a/src/app/computing-section/computing-section.component.html
+++ b/src/app/computing-section/computing-section.component.html
@@ -121,14 +121,14 @@
       <mat-list>
         <mat-list-item>
           <mat-icon mat-list-icon>keyboard_arrow_right</mat-icon>
-          <h4 mat-line>Technical precision</h4>
-          <p mat-line> Features are marked exactly, that displayed size are proportional to their
+          <h4 mat-line id="petit">Technical precision</h4>
+          <p mat-line id="trespetit"> Features are marked exactly, that displayed size are proportional to their
             length. Exact representations. </p>
         </mat-list-item>
         <mat-list-item>
           <mat-icon mat-list-icon>keyboard_arrow_right</mat-icon>
-          <h4 mat-line>Clear Communication</h4>
-          <p mat-line> The overall purpose and functioning of the system is readily understood. Teaching material.</p>
+          <h4 mat-line id="petit">Clear Communication</h4>
+          <p mat-line id="trespetit"> The overall purpose and functioning of the system is readily understood. Teaching material.</p>
         </mat-list-item>
       </mat-list>
       These purposes are sometime at odds. Smart compromise may be possible in some cases but not all. In synthetic
@@ -170,7 +170,8 @@
 
         <tr><td>More shapes for the plasmid circle itself</td></tr>
       </table>
-      <p>And even more !</p>
+
+      <p id="even_more">And even more !</p>
 
 
   </mat-card>
