--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,150 +1,146 @@
 <div class="innercontainer">
-<img id="tuyaujaune" src="http://2018.igem.org/wiki/images/7/76/T--GO_Paris-Saclay--tuyau_jaune.png"alt="tuyau jaune">
-  <img id="carre" src="http://2018.igem.org/wiki/images/5/5f/T--GO_Paris-Saclay--carre_colore.png"      alt="carres_multicolores">
+
+  <img id="tuyaujaune" src="http://2018.igem.org/wiki/images/7/76/T--GO_Paris-Saclay--tuyau_jaune.png"
+       alt="tuyau jaune">
 
 
-<img id="carre_blanc" src="http://2018.igem.org/wiki/images/3/38/T--GO_Paris-Saclay--carre_blanc.png"alt="carre_blanc">
+  <img id="carre" src="http://2018.igem.org/wiki/images/5/5f/T--GO_Paris-Saclay--carre_colore.png"
+       alt="carres_multicolores">
 
-<img id="methotrexit" src="
+
+  <img id="carre_blanc" src="http://2018.igem.org/wiki/images/3/38/T--GO_Paris-Saclay--carre_blanc.png"
+       alt="carre_blanc">
+
+  <img id="methotrexit" src="
 http://2018.igem.org/wiki/images/2/28/T--GO_Paris-Saclay--methotrexittire.png
-"alt="titre logo methotrexit">
+" alt="titre logo methotrexit">
 
-<h2 id="sous_titre">Heterogen<img class="idea" src="http://2018.igem.org/wiki/images/c/c6/T--GO_Paris-Saclay--idea.png"alt="idea">ous Cleaning Factory</h2>
-
-
-
-<div class="discover">
- <p> <a href="#ancre" pageScroll>Discover our project</a></p>
-</div>
-
-<img id="bloc2" src="http://2018.igem.org/wiki/images/5/56/T--GO_Paris-Saclay--BON2909bloc2.png" alt="bloc2">
-
-<div id="textbloc2">
-  Thanks to medicinal
-  advances, each year drug consumption increases to meet the needs of the population.<br><br>
-  However drugs are not totally metabolized and by-products accumulate in wastewater.
-</div>
-<a id="double_fleche" href="#ancre2" pageScroll><img id="double_fleche" src="http://2018.igem.org/wiki/images/9/93/T--GO_Paris-Saclay--.double_fleche.png" alt="double_fleche"></a>
-
-<div id="ancre">o</div>
+  <h2 id="sous_titre">Heterogen<img class="idea"
+                                    src="http://2018.igem.org/wiki/images/c/c6/T--GO_Paris-Saclay--idea.png" alt="idea">ous
+    Cleaning Factory</h2>
 
 
+  <div class="discover">
+    <p><a href="#ancre" pageScroll>Discover our project</a></p>
+  </div>
 
-<img id="bloc3" src="http://2018.igem.org/wiki/images/0/08/T--GO_Paris-Saclay--bloc3.png" alt="bloc3">
+  <img id="bloc2" src="http://2018.igem.org/wiki/images/5/56/T--GO_Paris-Saclay--BON2909bloc2.png" alt="bloc2">
 
-<div id="ancre2">o</div>
+  <div id="textbloc2">
+    Thanks to medicinal
+    advances, each year drug consumption increases to meet the needs of the population.<br><br>
+    However drugs are not totally metabolized and by-products accumulate in wastewater.
+  </div>
+  <a id="double_fleche" href="#ancre2" pageScroll><img id="double_fleche"
+                                                       src="http://2018.igem.org/wiki/images/9/93/T--GO_Paris-Saclay--.double_fleche.png"
+                                                       alt="double_fleche"></a>
 
-<div id="leading">Leading to...</div>
+  <div id="ancre">o</div>
 
-<div id="antibio">Antibiotic resistance</div>
 
-<div id="vitro">Disrupting effects on cells</div>
+  <img id="bloc3" src="http://2018.igem.org/wiki/images/0/08/T--GO_Paris-Saclay--bloc3.png" alt="bloc3">
 
-<div id="alter">Altered ecosystems</div>
+  <div id="ancre2">o</div>
 
-<a id="double_fleche2" href="#ancre3" pageScroll><img id="double_fleche2" src="http://2018.igem.org/wiki/images/9/93/T--GO_Paris-Saclay--.double_fleche.png" alt="double_fleche"></a>
-<!--
-<img id="bloc4" src="http://2018.igem.org/wiki/images/6/6d/T--GO_Paris-Saclay--cartelegende.png
+  <div id="leading">Leading to...</div>
+
+  <div id="antibio">Antibiotic resistance</div>
+
+  <div id="vitro">Disrupting effects on cells</div>
+
+  <div id="alter">Altered ecosystems</div>
+
+  <a id="double_fleche2" href="#ancre3" pageScroll><img id="double_fleche2"
+                                                        src="http://2018.igem.org/wiki/images/9/93/T--GO_Paris-Saclay--.double_fleche.png"
+                                                        alt="double_fleche"></a>
+
+  <img id="bloc4" src="http://2018.igem.org/wiki/images/6/6d/T--GO_Paris-Saclay--cartelegende.png
 " alt="bloc4">
-<div id="ancre3">o</div>
+  <div id="ancre3">o</div>
 
-<div id="texte_carte">Most of these studies have been performed under countries that already have a wastewater treatment program.
-</div>
-
-<div id="text2carte">Pharmaceuticals pollution is underated.</div>
-
-<div id="text3">Some paper, says that if no mitigation action is taken, this environmental threat will increase up to <strong>65%</strong> by 2050 for some drugs.</div>
--->
-
-  <div class="oursolution" id="ancre3">
-    <div class="oursoltext">Our&nbsp;solution&nbsp;:&nbsp;Methotrexit</div>
+  <div id="texte_carte">A majority of studies on the subject are done in countries that already have a wastewater
+    treatment program.
   </div>
 
-  <div class="smallpresproj">
-      We designed a novel biotransformation pathway using a heterologously expressed carboxypeptidase in <i>Escherichia coli</i>.
-     In only 5 hours, <b>MethotrExit</b> drastically removes methotrexate (MTX), a broadly used anticancer drug from
-      the media.<br><br>
-    However, degrading drugs can prove toxic to the bacteria itself. To
-      overcome this issue, we bring heterogeneity in the form of varying pathway expression, as that ensures the survival of a
-      self-renewable, reserve subpopulation: a division of labor between ‘cleaning’ and ‘stem’
-      bacterial cells is achieved.
+  <div id="text2carte">Pharmaceuticals pollution is underated.</div>
+
+  <div id="text3">If no mitigating action is taken, the environmental threat could increase by up to
+    <strong>65%</strong> in 2050 for some drugs.
+  </div>
+  <div id="titre3">OUR&nbsp;SOLUTION:&nbsp;<span id="metho_rouge">METHOTREXIT</span>
+  </div>
+  <img id="bloc5" src="http://2018.igem.org/wiki/images/c/c9/T--GO_Paris-Saclay--bacteriapower.png
+" alt="bloc5">
+  <div id="ancre4">o</div>
+  <div id="text_bact1">We designed a unique biotransformation pathway using a heterologously expressed carboxypeptidase
+    coupled with FolC in <i>Escherichia coli</i>. <span id="metho_rouge">MethotrExit</span> drastically and quickly removes
+    methotrexate, a broadly used anticancer drug, from the media.
+  </div>
+  <div id="text_bact2">We found <span id="bleu">degrading drugs can be toxic to the bacteria itself</span> and we wanted
+    a project that can be adaptable to any drug degradation in wastewater
   </div>
 
-  <img src="http://2018.igem.org/wiki/images/1/1e/T--GO_Paris-Saclay--frontpage_descr.png" class="wideimg schemashort">
-
-  <div class="comeseemore">
-    <div class="seemoretext"><a style="color:white;" (click)="this.router.navigate(['project'], { fragment: 'top'})"> &gt;&nbsp;Learn&nbsp;more&nbsp;about&nbsp;MethotrExit&nbsp;!&nbsp;&lt; </a></div>
+  <div id="text_bact3">We bring <span id="gras">heterogeneity in the form of varying pathway expression</span>, as that
+    ensures the survival of a self-renewable reserve subpopulation : <br>
+    A division of labor between <span id="metho_rouge">‘cleaning’</span> and <span id="jaune">‘stem’</span> bacteria
   </div>
 
+  <div id="butr">BUT…
+  </div>
 
-</div>
+  <a id="double_fleche3" href="#ancre4" pageScroll><img id="double_fleche3"
+                                                        src="http://2018.igem.org/wiki/images/9/93/T--GO_Paris-Saclay--.double_fleche.png"
+                                                        alt="double_fleche"></a>
 
-<!-- <div class="grid-container">
-  <h1 class="mat-h1"><span style="color: #62003c;">Methotr</span><span style="color:  red;">Exit</span> : a HeteroGenious Cleaning Factory</h1>
+  <a id="double_fleche4" href="#ancre5" pageScroll><img id="double_fleche4"
+                                                        src="http://2018.igem.org/wiki/images/9/93/T--GO_Paris-Saclay--.double_fleche.png"
+                                                        alt="double_fleche"></a>
 
-      <mat-card class="dashboard-card" >
-        <mat-card-header>
-          <mat-card-title>
-            Our Project
-          </mat-card-title>
-        </mat-card-header>
-        <mat-card-content class="dashboard-card-content" >
-          <div>
-              <div id="d3container" style="margin: auto;">
-                <svg id="d3target"  height="400" width="674" style="display: block;margin: auto;">
-                  <g transform="translate(20,100)">
-                    <text font-size="15" text-anchor="middle" transform="translate(70,-5)">Hospital effluents</text>
-                    <g id="d3inputgauge" style="height: 150px;width: 150px;" ></g>
-                  </g>
-                  <polygon points="5,270 250,270 250,200 400,200 400,270 650,270 650,320 400,320 400,350 250,350 250,320 5,320" style="fill: url('#animate-gradient');stroke: #5a0036FF; stroke-width: 5px" />
-                  <g transform="translate(250,200)" id="bacteriacontainer">
-                    <g></g>
-                  </g>
-                  <line x1="250" y1="270" x2="250" y2="320" style="fill: transparent; stroke: #000000ff; stroke-dasharray: 2,2; stroke-width: 2px;"></line>
-                  <line x1="400" y1="270" x2="400" y2="320" style="fill: transparent; stroke: #000000ff; stroke-dasharray: 2,2; stroke-width: 2px;"></line>
-
-                  <g transform="translate(470,100)">
-                    <text font-size="15" text-anchor="middle" transform="translate(70,-5)">Wastewater output</text>
-                    <g id="d3outgauge" style="height: 150px;width: 150px;" ></g>
-                  </g>
-
-                  <g transform="translate(180,20)">
-                    <text font-size="15" text-anchor="middle" transform="translate(145,163)">Bacterial population</text>
-                    <g id="d3bimodal" transform="translate(20,0)"></g>
-                    <g id="d3bimodallegend" transform="translate(0,0)"></g>
-                  </g>
-                </svg>
-
-              </div>
-
-              <div style="padding: 10px;" class="project-pres">
-                Cytotoxic anticancer drugs are among harmful chemicals found in hospital wastewater at high concentration.
-                Degradation through physical and chemical methods exist but are often inefficient, unsustainable or expensive.
-                We propose MethotrExit, a bioreactor-based approach to tackle this problem. We focused on the biotransformation
-                of methotrexate (MTX), a widely used anticancer drug.
-                <br><br>
-                We designed synthetic cassettes encoding a new biotransformation pathway using an heterologous carboxypeptidase
-                in Escherichia coli. In only 6 hours, MethotrExit drastically removes MTX from the media.
-
-                However, the degradation of anticancer drugs and the biotransformation pathway itself can be toxic.
-                To overcome these issues, biobricks bringing an heterogeneity in enzyme expression were built to ensure the
-                survival of a subpopulation. Modeling of this system highlights the interest of a division of labor between
-                “cleaning” and “stem” bacterial cells.
-
-
-
-              </div>
-
-          </div>
-
-
-
-        </mat-card-content>
-      </mat-card>
-
+  <a id="double_fleche5" href="#ancre6" pageScroll><img id="double_fleche5"
+                                                        src="http://2018.igem.org/wiki/images/9/93/T--GO_Paris-Saclay--.double_fleche.png"
+                                                        alt="double_fleche"></a>
+  <div id="ancre5">o</div>
+  <div id="ancre6">o</div>
+  <div id="sor">SO
+  </div>
 
 
 </div>
 
 
--->
+
+<footer class="footer-distributed">
+
+  <div class="footer-left">
+
+    <img id="logo" src="http://2018.igem.org/wiki/images/1/11/T--GO_Paris-Saclay--logobleu.png"alt="logo">
+
+    <p class="footer-company-name">Igem GO Paris Saclay &copy; 2018</p>
+  </div>
+
+  <div class="footer-center">
+
+    <div>
+      <p><span>15, rue Georges Clémenceau</span> <br>91405 Orsay, France</p>
+
+    </div>
+
+    <div>
+      <p id="mail"><a href="mailto:igem.parissaclay@gmail.com">igem.parissaclay@gmail.com</a></p>
+    </div>
+
+  </div>
+
+  <div class="footer-right">
+
+    <div class="footer-icons">
+
+      <a href="https://www.facebook.com/iGEMParisSaclay/"><img id="ic" src="http://2018.igem.org/wiki/images/f/f2/T--GO_Paris-Saclay--socialfb.png" alt="fb"></a>
+      <a href="https://twitter.com/igemparissaclay?lang=en"><img id="ic"src="http://2018.igem.org/wiki/images/e/e6/T--GO_Paris-Saclay--twittersocial.png" alt="tw"></a>
+      <a href="#"><img id="ic"src="http://2018.igem.org/wiki/images/2/22/T--GO_Paris-Saclay--linkedinso.png"alt="linkedin"></a>
+
+    </div>
+
+  </div>
+
+</footer>
