--- a/src/app/modeling/modeling.component.html
+++ b/src/app/modeling/modeling.component.html
@@ -238,15 +238,17 @@
 
     <mat-card class="wideimg" >
       <img src="http://2018.igem.org/wiki/images/8/8a/T--GO_Paris-Saclay--model_fig3.png" class="wideimg">
-      <div class="mat-caption captionafterapicture">Figure 4 from
+      <div class="mat-caption captionafterapicture">Figure 4
         <reference-box shorthand="Patra2013"></reference-box>
-        : Numerical integration of Eqs. (D,E) over a growth period of 15 hours (with μgn 2hr−1,μgn 0.2hr−1) followed by
+        <div class="captionmaterialmethod">
+        Numerical integration of Eqs. (D,E) over a growth period of 15 hours (with μgn 2hr−1,μgn 0.2hr−1) followed by
         a stress period (with μgn −2hr−1,μgn −0.2hr−1) of another 15 hours. The switching rates were chosen to be a
         0,001hr−1 and b 0,0001hr−1 . The killing curve of total population show two distinct phases, a fast-decaying
         phase and a slow-decaying phase. (b) Numerical integration of Eqs. (1) over a stress period of 15 hours followed
         by a regrowth period of another 15 hours. The regrowth curve of the total population shows two distinct phases,
         a slow-growing phase followed by a fast-growing phase. The parameters are the same as in (a). Here the "stem"
         cells are the normal cells, and the degradation cells are the persistence cells.
+        </div>
       </div>
     </mat-card>
     They even compute $T_s$, the time where transition occurs:
