--- a/src/app/reference-box/reference-box.component.html
+++ b/src/app/reference-box/reference-box.component.html
@@ -1,1 +1,1 @@
-<sup><a style="color: rgb(32,56,100);font-size: 14px;cursor: pointer;"  (click)="openRefBottomSheet()">[{{this.ref.index}}]</a></sup>
+<sup><a style="color: rgb(32,56,100);font-size: 12pt;font-weight:normal;cursor: pointer;"  (click)="openRefBottomSheet()">[{{this.ref.index}}]</a></sup>
