--- a/src/app/team-roster/team-roster.component.html
+++ b/src/app/team-roster/team-roster.component.html
@@ -28,7 +28,7 @@
 
 
 <figure id="figure4">
-  <p><img src="http://2018.igem.org/wiki/images/f/f4/T--GO_Paris-Saclay--diveremp.png"
+  <p><img src="http://2018.igem.org/wiki/images/6/60/T--GO_Paris-Saclay--TEAM1410.png"
           alt="tableauinterlab">
   </p>
 </figure>
@@ -95,6 +95,13 @@
 
 <div id="ket">
   Kenn
+</div>
+
+<div id="yu"><a href="#yul"><img src="http://2018.igem.org/wiki/images/3/30/T--GO_Paris-Saclay--yu.png"
+                                 alt="logoparissaclay"></a></div>
+
+<div id="yut">
+  Yueying
 </div>
 
 <div id="ous"><a href="#ousl"><img src="http://2018.igem.org/wiki/images/5/5d/T--GO_Paris-Saclay--ous.png"
@@ -169,7 +176,7 @@
 
 <div class="textphot">
 
-  Raphaël Gueguan
+  <div id="memg"> Raphaël Gueguan </div>
   <br>
 
   Age: 23<br>
@@ -182,7 +189,7 @@
                          alt="logoparissaclay"></div>
 
 <div class="textphot">
-  Arthur Radoux
+   <div id="memg">Arthur Radoux</div>
   <br/>
 
   Age: 23 <br/>
@@ -194,19 +201,19 @@
                          alt="logoparissaclay"></div>
 
 <div class="textphot">
-  Britany Marta
+   <div id="memg">Britany Marta</div>
   <br/>
 
-  Age: 22<br/>
+  Age: 23<br/>
 
-  Queen of bacteria !
+  The bacteria queen!
 </div>
 
 <div id="photdescr"><img src="http://2018.igem.org/wiki/images/c/c0/T--GO_Paris-Saclay--clema.png"
                          alt="logoparissaclay"></div>
 
 <div class="textphot">
-  Clémence Maupu
+   <div id="memg">Clémence Maupu</div>
   <br/>
 
   Age: 22<br/>
@@ -218,7 +225,7 @@
                          alt="logoparissaclay"></div>
 
 <div class="textphot">
-  Guillaume Garnier
+   <div id="memg">Guillaume Garnier</div>
   <br/>
 
   Age: 23<br/>
@@ -230,7 +237,7 @@
                          alt="logoparissaclay"></div>
 
 <div class="textphot">
-  Julie Miesch
+   <div id="memg">Julie Miesch</div>
   <br/>
 
   Age: 22<br/>
@@ -242,7 +249,7 @@
                          alt="logoparissaclay"></div>
 
 <div class="textphot">
-  Julie Rojahn
+   <div id="memg">Julie Rojahn</div>
   <br/>
 
   Age: 23<br/>
@@ -254,7 +261,7 @@
                          alt="logoparissaclay"></div>
 
 <div class="textphot">
-  Kenn Papadopoulo
+   <div id="memg">Kenn Papadopoulo</div>
   <br/>
 
   Age: 22<br/>
@@ -262,11 +269,11 @@
   All work no play. Also, windsurf.
 </div>
 
-<div id="photdescr"><img id="yueying" src="http://2018.igem.org/wiki/images/f/f2/T--GO_Paris-Saclay--yueying.png"
+<div id="photdescr"><img id="yul" src="http://2018.igem.org/wiki/images/3/30/T--GO_Paris-Saclay--yu.png"
                          alt="logoparissaclay"></div>
 
 <div class="textphot">
-  Yueying Zhu
+   <div id="memg">Yueying Zhu</div>
   <br/>
 
   Age: 22<br/>
@@ -279,7 +286,7 @@
                            alt="logoparissaclay"></div>
 
   <div class="textphotousm">
-    Ousmane Dao
+     <div id="memg">Ousmane Dao</div>
     <br/>
 
     Age: 21<br/>
@@ -300,7 +307,7 @@
                          alt="logoparissaclay"></div>
 
 <div class="textphotadv">
-  Céline Aubry
+   <div id="memg">Céline Aubry</div>
   <br/>
 
   We broke her glass cell spreader. Sorry !
@@ -312,7 +319,7 @@
                            alt="logoparissaclay"></div>
 
   <div class="textphotadv">
-    Mahnaz Sabeti Azad
+     <div id="memg">Mahnaz Sabeti Azad</div>
     <br/>
 
     A breeze of fresh air.
@@ -323,7 +330,7 @@
                          alt="logoparissaclay"></div>
 
 <div class="textphotadv">
-  Olivier Namy
+   <div id="memg">Olivier Namy</div>
   <br/>
 
   Tempered our expectations.
@@ -333,7 +340,7 @@
                          alt="logoparissaclay"></div>
 
 <div class="textphotadv">
-  Philippe Bouloc
+   <div id="memg">Philippe Bouloc</div>
   <br/>
 
   Phage master.
@@ -345,7 +352,7 @@
 </div>
 
 <div class="textphotadv">
-  Stéphanie Bory-Moné
+  <div id="memg">Stéphanie Bory-Moné</div>
   <br/>
 
   Leading.
@@ -357,7 +364,7 @@
                            alt="logoparissaclay"></div>
 
   <div class="textphotousm">
-    Sylvie Lautru
+    <div id="memg">Sylvie Lautru</div>
     <br/>
 
     Organized our work.
