--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -11,7 +11,7 @@
   overflow: auto;
 }
 
-mat-card-title{
+.mat-card-title{
   font-weight: bold;
 }
 
@@ -33,6 +33,9 @@ h1, h2, h3, h4,h5,h6,p, u, li, a{
 
 
 /********************************* CSS POSITION DES IMAGES ET TEXTES PAGE PRINCIPAL **************************/
+
+
+
 #carre_blanc
 {
   width: 100px;
@@ -43,7 +46,7 @@ h1, h2, h3, h4,h5,h6,p, u, li, a{
 {
   width: 500px;
   position: absolute;
-  top: 30px;
+  top: -5px;
   right: 0px;
 }
 #titre_principal
@@ -57,10 +60,10 @@ h1, h2, h3, h4,h5,h6,p, u, li, a{
 #sous_titre
 {
   color: white;
-  font-size: 1.5em;
+  font-size: 2em;
   position: absolute;
-  right: 620px;
-  top: 310px;
+  right: 560px;
+  top: 330px;
 }
 .idea
 {
@@ -70,19 +73,16 @@ h1, h2, h3, h4,h5,h6,p, u, li, a{
 
 .discover
 {
-  width: 11em;
+  width: 258px;
   font-size: 1.27em;
+  padding: 10px 10px 0 28px;
   background-color: rgb(254,215,102);
   border-radius: 10px;
   border: 1px rgb(254,215,102);
-  text-align: center;
-  padding: 8px 8px 8px 8px ;
   color: white;
   text-decoration: none;
-  margin-right: auto;
-  margin-left: auto;
   position: absolute;
-  top: 400px;
+  top: 420px;
   right: 600px;
   z-index: 2;
 }
@@ -91,6 +91,10 @@ a:hover /* Apparence au survol des liens */
 {
   text-decoration: none;
   color: white;
+}
+
+a{
+  color: rgb(32,56,100);
 }
 
 #bloc2
@@ -160,7 +164,10 @@ a:hover /* Apparence au survol des liens */
   left: 120px;
   font-family: 'Lato', Helvetica, SansSerif;
 }
-
+#jaune
+{
+  color:rgb(254,215,102);
+}
 #vitro
 {
   color:rgb(254,215,102);
@@ -191,11 +198,44 @@ a:hover /* Apparence au survol des liens */
   color: rgb(32,56,100);
   font-size: 0.2em;
   position: absolute;
-  top: 1380px;
+  top: 1340px;
   left: 80px;
   z-index: 6;
   font-family: 'Lato', Helvetica, SansSerif;
 }
+
+#ancre4
+{
+  color: rgb(32,56,100);
+  font-size: 0.2em;
+  position: absolute;
+  top: 2770px;
+  left: 80px;
+  z-index: 6;
+  font-family: 'Lato', Helvetica, SansSerif;
+}
+#ancre5
+{
+  color: rgb(32,56,100);
+  font-size: 0.2em;
+  position: absolute;
+  top: 3240px;
+  left: 80px;
+  z-index: 1200;
+  font-family: 'Lato', Helvetica, SansSerif;
+}
+
+#ancre6
+{
+  color: rgb(32,56,100);
+  font-size: 0.2em;
+  position: absolute;
+  top: 3845px;
+  left: 80px;
+  z-index: 6;
+  font-family: 'Lato', Helvetica, SansSerif;
+}
+
 #double_fleche2
 {
   width: 60px;
@@ -204,12 +244,43 @@ a:hover /* Apparence au survol des liens */
   right: 120px;
   z-index: 7;
 }
+#double_fleche3
+{
+  width: 60px;
+  position: absolute;
+  top: 1310px;
+  right: 100px;
+  z-index: 7;
+}
+#double_fleche4
+{
+  width: 50px;
+  position: absolute;
+  top: 1680px;
+  left: 320px;
+  z-index: 7;
+}
+#double_fleche5
+{
+  width: 50px;
+  position: absolute;
+  top: 1890px;
+  right: 320px;
+  z-index: 9;
+}
 #bloc4
 {
   width: 700px;
   position: absolute;
   top:2200px;
   left: 40px;
+}
+
+#bloc5
+{
+  width: 90%;
+  position: absolute;
+  top: 2880px;
 }
 
 #tuyaujaune
@@ -235,12 +306,12 @@ a:hover /* Apparence au survol des liens */
 #texte_carte
 {
   color: white;
-  font-size: 1.5em;
+  font-size: 1.8em;
   width: 400px;
   position: absolute;
-  top:2250px;
+  top:2180px;
   text-align: center;
-  right: 30px;
+  right: 50px;
   line-height: 1.2em;
   font-family: 'Lato', Helvetica, SansSerif;
   z-index: 6;
@@ -249,12 +320,12 @@ a:hover /* Apparence au survol des liens */
 #text2carte
 {
   color:rgb(254,74,73);
-  font-size: 2em;
+  font-size: 2.5em;
   width: 400px;
   position: absolute;
-  top:2400px;
+  top:2330px;
   text-align: center;
-  right: 30px;
+  right: 50px;
   line-height: 1.2em;
   font-family: 'Lato', Helvetica, SansSerif;
   z-index: 6;
@@ -262,16 +333,99 @@ a:hover /* Apparence au survol des liens */
 #text3
 {
   color:white;
-  font-size: 1.5em;
+  font-size: 1.8em;
   width: 400px;
   position: absolute;
-  top:2500px;
+  top:2445px;
   text-align: center;
-  right: 30px;
+  right: 50px;
   line-height: 1.2em;
   font-family: 'Lato', Helvetica, SansSerif;
   z-index: 6;
 }
+
+#text_bact1
+{
+  color:white;
+  font-size: 1.8em;
+  width: 400px;
+  position: absolute;
+  top:2940px;
+  text-align: center;
+  right: 70px;
+  line-height: 1.2em;
+  font-family: 'Lato', Helvetica, SanfsSerif;
+  z-index: 6;
+}
+#text_bact2
+{
+  color:white;
+  font-size: 1.8em;
+  width: 400px;
+  position: absolute;
+  top:3540px;
+  text-align: center;
+  left: 40px;
+  line-height: 1.2em;
+  font-family: 'Lato', Helvetica, SansSerif;
+  z-index: 6;
+}
+#text_bact3
+{
+  color:white;
+  font-size: 2em;
+  width: 400px;
+  position: absolute;
+  top:4020px;
+  text-align: center;
+  right: 70px;
+  line-height: 1.2em;
+  font-family: 'Lato', Helvetica, SansSerif;
+  z-index: 6;
+}
+
+#butr
+{
+  color: white;
+  font-size: 4em;
+  position: absolute;
+  top:3285px;
+  right: 450px;
+  text-align: center;
+
+}
+#sor
+{
+  color: white;
+  font-size: 4em;
+  position: absolute;
+  top:3740px;
+  left: 170px;
+  text-align: center;
+
+}
+#gras
+{
+  font-style: bold;
+}
+
+#titre3
+{
+  color:white;
+  font-size: 4.6em;
+  position: absolute;
+  top:2800px;
+  text-align: center;
+  right: 50px;
+  font-family: 'Lato', Helvetica, SansSerif;
+  z-index: 6;
+}
+
+#metho_rouge
+{
+  color:rgb(254,74,73);
+}
+
 
 
 .oursolution {
@@ -294,7 +448,7 @@ a:hover /* Apparence au survol des liens */
   font-size: 2em;
   left: 0px;
   line-height: 1.2em;
-text-align: justify;
+  text-align: justify;
   font-family: 'Lato', Helvetica, SansSerif;
   padding: 20px 100px;
 }
@@ -341,4 +495,68 @@ text-align: justify;
   font-weight: bolder;
   font-size: 50pt;
   cursor: pointer;
+}
+
+#bleu
+{
+  color:rgb(42,183,202);
+}
+
+.footer-distributed .footer-center p a{
+  color: rgb(46,80,142);
+  text-decoration: none;
+}
+.footer-center
+{
+  text-align: center;
+  font-size: 20px;
+}
+
+
+
+#ic
+{
+  width: 55px;
+  margin: auto;
+}
+#logo
+{
+  width: 200px;
+  margin-left: 2px;
+}
+
+
+
+
+.footer-distributed .footer-center p a{
+  color: rgb(46,80,142);
+  text-decoration: none;
+}
+.footer-center
+{
+  text-align: center;
+  font-size: 20px;
+}
+
+
+
+#ic
+{
+  width: 55px;
+  margin: auto;
+}
+#logo
+{
+  width: 200px;
+  margin-left: 2px;
+}
+
+
+.footer-distributed
+{
+  background-color: rgb(217,217,217);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
 }
